# SCPU

./: CMakeLists.txt  README.md  listing_example.txt  main.c  proc_commands_trans
compiler/: translator.h
compiler/src/: translator.c
lib/: filestuff.c  filestuff.h  stack.c  stack.h
soft_processor/: commands.h  proc.c  proc.h
